this is the demo one

--- a/FinalJobMatching/tsconfig.json
+++ b/FinalJobMatching/tsconfig.json
@@ -19,12 +19,21 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "types": [
+      "jquery", // Add
+      "materialize-css" // Add
+  ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "src/test.ts",
+    "**/*.spec.ts"
+  ]
 }
+
